# rig-use

./: Cargo.toml  README.md  response.md
examples/: README.md  basic_gemini_agent.md  basic_gemini_agent.rs  basic_xai_agent.md  basic_xai_agent.rs
src/: main.rs
