[package]
name = "rig-use"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.6.0"
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"

[[example]]
name = "text_classifier_extractor"